--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -67,6 +67,13 @@ html, body {
   flex-direction: column;
 }
 
+/* Tamaño mínimo para el panel lateral */
+.p-splitter .p-splitter-panel:first-child {
+  min-width: 133px !important;
+  min-height: 47px !important;
+  max-width: 400px;
+}
+
 .p-treenode:hover .node-action-button {
   visibility: visible;
 }
